--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
     "dependencies": {
+        "commander": "^12.0.0",
+        "glob": "^10.3.10",
         "list-css-classes": "^1.21.0"
     },
     "scripts": {
