--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
         "list-classes": "node index.js 2>/dev/null",
         "list-classes-dev": "node index.js",
         "get-pico-sample": "curl --remote-name --output-dir css 'https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css'",
-        "get-bootstrap-sample": "curl --remote-name --output-dir css 'https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css'",
-        "get-invalid-css": "curl --remote-name --output-dir css 'https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js'"
+        "get-bootstrap-sample": "curl --remote-name --output-dir css 'https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css'"
     }
 }
